# Universe-Viewer

./: LICENSE.md  README.md
Universe Viewer/: CMakeLists.txt
Universe Viewer/data/: 1000.html  50.html  Burbridge.xml
Universe Viewer/engine/: CMakeLists.txt
Universe Viewer/engine/engine-build/: CMakeCache.txt  Makefile  UniverseViewer.cbp  cmake_install.cmake
Universe Viewer/engine/include/: uv.h  uv_defines.h  uv_externs.h  uv_globals.h  uv_prototypes.h  uv_types.h
Universe Viewer/engine/src/: ACOSH.c  AONEonPdeR.c  ASC_DEGtoSTR_DEG.c  ASC_DEGtoSTR_HMS.c  ASC_RADtoSTR_DEG.c  ASC_RADtoSTR_HMS.c  CONCLUSION.c  DEC_DEGtoSTR_DEG.c  DEC_DEGtoSTR_DMS.c  DEC_RADtoSTR_DEG.c  DEC_RADtoSTR_DMS.c  DEGtoRAD.c  DMStoDEG.c  DMStoRAD.c  DlaRonPdeR.c  DomRonPdeR.c  ENTETE.c  HMStoDEG.c  HMStoRAD.c  MAGtoSTR.c  ONEonPdeR.c  PdeR.c  Qinit.c  RADtoDEG.c  REDtoSTR.c  RonPdeR.c  Vadd.c  Vinit.c  Vmult.c  Vneg_curv.c  Vnormalise.c  Vnorme.c  Vnul_curv.c  Vpos_curv.c  Vproduct.c  Vscalar.c  calc_quasar_pos.c  calc_quasar_proj.c  calc_quasar_tau.c  codistance.c  (+43 more)
Universe Viewer/gui/: CMakeLists.txt
Universe Viewer/gui/gtk/: CMakeLists.txt
Universe Viewer/gui/gtk/include/: interface.h  uv-gtk.h
Universe Viewer/gui/gtk/src/: callbacks.c  calldraw.c  deglade.c  globals.c  main.c  on_a_t_menu_activate.c  on_about_menu_activate.c  on_alpha_radio_activate.c  on_alpha_value_change_value.c  on_beta_value_change_value.c  on_calculus_menu_activate.c  on_center_view_activate.c  on_comobile_distance_menu_activate.c  on_declinaison_value_change_value.c  on_distance_menu_activate.c  on_earth_view_activate.c  on_edge1_menu_activate.c  on_edge2_menu_activate.c  on_edge3_menu_activate.c  on_edge_view_1_draw_expose_event.c  on_edge_view_2_draw_expose_event.c  on_edge_view_3_draw_expose_event.c  on_front1_menu_activate.c  on_front2_menu_activate.c  on_front3_menu_activate.c  on_front_view_1_draw_expose_event.c  on_front_view_2_draw_expose_event.c  on_front_view_3_draw_expose_event.c  on_go_zoom_activate.c  on_integrand_menu_activate.c  on_isotropic_menu_activate.c  on_k_radio_activate.c  on_k_value_change_value.c  on_lambda_radio_activate.c  on_lambda_value_change_value.c  on_lambda_vs_omega_menu_activate.c  on_localise_zoom_activate.c  on_move_steps_menu_activate.c  on_null_view_activate.c  on_omega_radio_activate.c  (+8 more)
Universe Viewer/gui/gtk/ui/: uv_lambda_vs_omega.glade  uv_main.glade  uv_view.glade
Universe Viewer/gui/qt/: CMakeLists.txt
Universe Viewer/gui/qt/src/: main.cpp
Universe Viewer/gui/qt/ui/: mainwindow.ui
UniverseViewer old/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  uv-2.glade  uv-2.gladep.bak  uv_2.pws
UniverseViewer old/autom4te.cache/: output.1  requests  traces.0  traces.1
UniverseViewer old/data/: Burbridge-p.txt  Burbridge.txt
UniverseViewer old/data_bkp/: 1000.txt  5.html  cones.txt  cones.xml  edge1.eps
UniverseViewer old/doc/: Documentation.html  doc.html  index.txt
UniverseViewer old/src/: .kdbgrc.uv-2  Makefile.am  Makefile.am~  Makefile.in  callbacks.c  callbacks.h  calldraw.h  distance.c  distance.h  env.h  interface.c  interface.h  isotrop.c  isotrop.h  projection.c  projection.h  quasar.c  quasar.h  space.c  space.h  struct.h  support.c  support.h  vector.c  vector.h
